<resources>
    <string name="app_name">Bull\'s Gym</string>
    <string name="let_s_bull_this_up">Let\'s Bull This Up</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continue_butoon">Continue</string>
    <string name="or">Or</string>
    <string name="signup_with_facebook">SignUp with Facebook</string>
    <string name="enter_weight">Enter Weight(kg)</string>
    <string name="enter_height">Enter Height(m)</string>
    <string name="enter_age">Enter Age</string>
    <string name="create_account_done">Create Account</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="unleash_the_bull">Unleash The Bull</string>
    <string name="title_activity_choose_gym">Map</string>
    <string name="Maps_Api_key">AIzaSyCHupRCeL9UuYCWMSp3CS6FrJIW3lf3gJU</string>
    <string name="title_activity_homepage_navigation">Bull\'s Gym</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="record_workout">Record Workout</string>
    <string name="progress_photos">Progress Photos</string>
    <string name="personal_trainers">Personal Trainers</string>
    <string name="workout_music">Workout Music</string>
    <string name="change_language">Change Language</string>
    <string name="no_pain_no_gain">No Pain, No Gain</string>
    <string name="your_progress">This will help us calculate your BMI to track your progress</string>
    <string name="select_gym">Select Gym</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="don_t_have_an_account_signup">Don\'t have an Account? SignUp</string>
    <string name="my_profiles">My Profile</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="workouts">Workouts</string>
    <string name="log">Log</string>
    <string name="chest">CHEST</string>
    <string name="legs">LEGS</string>
    <string name="arms">ARMS</string>
    <string name="sholders">sholders</string>
    <string name="abs">ABS</string>
    <string name="triceps">Triceps</string>
    <string name="title_activity_second_maps">Map</string>
    <string name="select_date_to_view_day_s_workouts">Select Date to view day\'s workouts</string>
    <string name="facebook_app_id">205203650099511</string>
    <string name="facebook_login_protocol_scheme">fb205203650099511</string>
    <string name="create_new_workout">Create new Workout</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="capture_image">Capture Image</string>
    <string name="terms_of_service">By continuing, you agree to our terms of service</string>
    <string name="open_camera">Open Camera</string>
    <string name="add_workout">Create Workout</string>
    <string name="reps_completed">Reps Completed</string>
    <string name="save_profile">Save Profile</string>
    <string name="change_gym_location">Change Gym Location</string>
    <string name="utility">Utility</string>
    <string name="calculate">Calculate</string>
    <string name="add_workout_record">Add Workout Record</string>
    <string name="workout_description">Workout Description</string>
    <string name="help">Bulls Gym is an international gym application designed to help you workout wherever you go and still be in contact with the gyms. You will be required to select a current Gym on first Registration but can later change when viewing your profile. After a successful login, you will be assigned beginner basic workouts with instructions. In case you find difficulty in following them alone, detail of the instructors have been put on the side menu. Bulls Gym also provides you with a utility tab where you can get your meals plan and BMI calculator. You can also record your won past workouts in the workouts tab and view them in the logs tab. For more info kindly contact us through 0790450728</string>
    <string name="getting_started">Getting Started</string>
    <string name="title_activity_maps">Map</string>
</resources>
