<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/my_profiles" />
        <item
            android:id="@+id/nav_Music"
            android:icon="@drawable/ic_music"
            android:title="@string/workout_music" />
        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/change_language" />
        <item
            android:id="@+id/nav_camera"
            android:title="Take Progress Photo"
            android:icon="@drawable/ic_camera"/>

        <item
            android:id="@+id/nav_instrustors"
            android:title="Gym Instructors"
            android:icon="@drawable/ic_instructor"/>

        <item
            android:id="@+id/nav_help"
            android:title="Help"
            android:icon="@drawable/ic_help"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />
    </group>
</menu>
