<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/black">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/chest"
                app:fontFamily="@font/nunito_extralight"
                android:textColor="@color/green"
                android:background="@drawable/chest"
                android:textStyle="bold"
                android:textSize="20sp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/legs"
                android:background="@drawable/legs"
                app:fontFamily="@font/nunito_extralight"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/arms"
                android:background="@drawable/bullbeast"
                app:fontFamily="@font/nunito_extralight"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/sholders"
                app:fontFamily="@font/nunito_extralight"
                android:background="@drawable/sholders"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@drawable/abs3"
                android:text="@string/abs"
                app:fontFamily="@font/nunito_extralight"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:text="@string/triceps"
                android:background="@drawable/triceps"
                app:fontFamily="@font/nunito_extralight"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>


</LinearLayout>