<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:background="@drawable/newloginbackground"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/let_s_bull_this_up"
        android:textColor="@color/green"
        android:layout_marginTop="10sp"
        android:textSize="30sp"
        app:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/RegisterEmail"
        app:met_iconLeft="@drawable/ic_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email_address"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_baseColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:met_primaryColor="@color/green"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="35"
        android:fontFamily="@font/nunito_extralight"
        android:inputType="textEmailAddress"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/RegisterPassword"
        app:met_iconLeft="@drawable/ic_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_baseColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:met_primaryColor="@color/green"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="35"
        android:fontFamily="@font/nunito_extralight"
        android:inputType="textPassword"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/RegisterConfirmPassword"
        app:met_iconLeft="@drawable/ic_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_baseColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:met_primaryColor="@color/green"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="35"
        android:fontFamily="@font/nunito_extralight"
        android:inputType="textPassword"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/terms_of_service"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/Continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:text="@string/continue_butoon"
        app:fontFamily="@font/nunito_extralight"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/green"
        android:textSize="22sp"
        app:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal"/>

    <com.facebook.login.widget.LoginButton
        android:textSize="20sp"
        android:id="@+id/login_facebook"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>