<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register2"
    android:orientation="vertical"
    android:background="@drawable/newloginbackground">

    <TextView
        android:layout_marginTop="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unleash_the_bull"
        android:textColor="@color/green"
        android:layout_marginBottom="10sp"
        android:textSize="30sp"
        app:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/RegisterSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/RegisterWeight"
        app:met_iconLeft="@drawable/ic_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_weight"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_baseColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:met_primaryColor="@color/green"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="3"
        android:fontFamily="@font/nunito_extralight"
        android:inputType="number"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/RegisterHeight"
        app:met_iconLeft="@drawable/ic_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_height"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_baseColor="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:met_primaryColor="@color/green"
        app:met_floatingLabel="highlight"
        app:met_maxCharacters="2"
        android:fontFamily="@font/nunito_extralight"
        android:inputType="number"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:text="@string/your_progress"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_extralight"
        android:gravity="center_horizontal"/>

    <Button
        android:id="@+id/Select_Gym"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:text="@string/select_gym"
        app:fontFamily="@font/nunito_extralight"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false" />

    <!--<Button-->
        <!--android:id="@+id/CreateAccount"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:background="@color/green"-->
        <!--android:gravity="center"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:textColor="@android:color/black"-->
        <!--android:padding="10dp"-->
        <!--android:text="@string/create_account_done"-->
        <!--app:fontFamily="@font/nunito_extralight"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="20sp"-->
        <!--android:textAllCaps="false" />-->

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:id="@+id/Regiates_Progress"/>

    </LinearLayout>