<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@android:color/black">

    <LinearLayout
        android:id="@+id/LayoutRecordWorkout"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/recordpicture"
        android:orientation="vertical"
        android:layout_marginEnd="1dp">

        <TextView
            android:id="@+id/TxtRecordWorkout"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:text="@string/record_workout"
            android:textColor="@color/green"
            android:textSize="30sp"
            app:fontFamily="@font/nunito_extralight"
            android:layout_marginStart="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayoutProgressPhotos"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/planspic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TxtProgressPhotos"
            android:layout_width="160sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginRight="10sp"
            android:text="@string/progress_photos"
            android:layout_gravity="end"
            android:textColor="@color/green"
            android:textSize="30sp"
            app:fontFamily="@font/nunito_extralight"
            android:layout_marginEnd="10sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/LayoutPersonalTrainers"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@drawable/trainerpic"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TxtPersonalTrainers"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginLeft="10sp"
            android:text="@string/personal_trainers"
            android:textColor="@color/green"
            android:textSize="30sp"
            app:fontFamily="@font/nunito_extralight"
            android:layout_marginStart="10sp" />
    </LinearLayout>

</LinearLayout>