<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddWorkout"
    android:orientation="vertical"
    android:background="@color/black">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_workout_record"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:padding="10sp"
        app:fontFamily="@font/nunito_extralight"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reps_completed"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:padding="10sp"
        app:fontFamily="@font/nunito_extralight"/>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/spinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <TextView
        android:id="@+id/addWorkoutMonth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="month"
        android:visibility="gone"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:fontFamily="@font/nunito_extralight"/>

    <com.github.sundeepk.compactcalendarview.CompactCalendarView
        android:layout_marginTop="15dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/addWorkout_compactcalendar"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:layout_height="250dp"
        app:compactCalendarTargetHeight="250dp"
        app:compactCalendarTextSize="15sp"
        app:compactCalendarBackgroundColor="@android:color/white"
        app:compactCalendarTextColor="@android:color/black"
        app:compactCalendarCurrentSelectedDayBackgroundColor="@color/green"
        app:compactCalendarCurrentDayBackgroundColor="#B71C1C"
        app:compactCalendarMultiEventIndicatorColor="#fff"
        />
    <Button
        android:layout_marginTop="10dp"
        android:id="@+id/BtnCreateWorkout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:gravity="center"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@android:color/black"
        android:padding="10dp"
        android:text="@string/add_workout"
        app:fontFamily="@font/nunito_extralight"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"/>


</LinearLayout>