<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile"
    android:background="@color/black">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/bullbeast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profile_Image"
        android:layout_width="87dp"
        android:layout_height="99dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/user_icon"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/Profile_currentBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="10sp"
        android:text="Current BMI"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:fontFamily="@font/nunito_extralight"
        app:layout_constraintStart_toEndOf="@+id/profile_Image"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ProfileEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/enter_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_Image"
        app:met_baseColor="@android:color/white"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_email"
        app:met_maxCharacters="35"
        app:met_primaryColor="@color/green" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/ProfilePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/enter_password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileEmail"
        app:met_baseColor="@android:color/white"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_password"
        app:met_maxCharacters="35"
        app:met_primaryColor="@color/green"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/Change_Gym_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:background="@color/green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/change_gym_location"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_extralight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfilePassword" />

    <Button
        android:id="@+id/Save_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@color/green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/save_profile"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Change_Gym_button" />

    <ProgressBar
        android:id="@+id/Profile_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>