<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMICalculator"
    android:background="@android:color/black">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/BMIWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/enter_weight"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:met_baseColor="@android:color/white"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_weight"
        app:met_maxCharacters="3"
        app:met_primaryColor="@color/green" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/BMIHeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_extralight"
        android:hint="@string/enter_height"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIWeight"
        app:met_baseColor="@android:color/white"
        app:met_errorColor="@android:color/holo_red_light"
        app:met_floatingLabel="highlight"
        app:met_iconLeft="@drawable/ic_weight"
        app:met_maxCharacters="3"
        app:met_primaryColor="@color/green" />
    <Button
        android:id="@+id/Calculate_BMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:background="@color/green"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="@font/nunito_extralight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BMIHeight"
        />

    <TextView
        android:visibility="gone"
        android:id="@+id/Total_BMI"
        android:text="TotalBMI"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/nunito_extralight"
        android:textColor="@color/green"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Calculate_BMI"
        android:padding="4sp"/>

    <TextView
        android:visibility="gone"
        android:id="@+id/BMICategory"
        android:text="TotalBMI"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/nunito_extralight"
        android:textColor="@color/green"
        android:textSize="21sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Total_BMI"
        android:padding="4sp"/>


</android.support.constraint.ConstraintLayout>